<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.ImeSettingsFragment"
        android:label="@string/input_methods">
        <action
            android:id="@+id/action_settingsFragment_to_inputSettingsFragment"
            app:destination="@id/inputSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_handwritingSettingsFragment"
            app:destination="@id/handwritingSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_voiceSettingsFragment"
            app:destination="@id/voiceSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_keyboardSettingsFragment"
            app:destination="@id/keyboardSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_themeSettingsFragment"
            app:destination="@id/themeSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_clipboardSettingsFragment"
            app:destination="@id/clipboardSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_pluginSettingsFragment"
            app:destination="@id/pluginSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_advancedSettingsFragment"
            app:destination="@id/advancedSettingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/inputSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.InputSettingsFragment"
        android:label="@string/setting_ime_input" />
    <fragment
        android:id="@+id/handwritingSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.HandwritingSettingsFragment"
        android:label="@string/ime_settings_handwriting" />
    <fragment
        android:id="@+id/voiceSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.VoiceSettingsFragment"
        android:label="@string/ime_settings_voice" />
    <fragment
        android:id="@+id/keyboardSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.KeyboardFeedbacksFragment"
        android:label="@string/keyboard_feedback" />
    <fragment
        android:id="@+id/themeSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.ThemeFragment"
        android:label="@string/keyboard" />
    <fragment
        android:id="@+id/clipboardSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.ClipboardSettingsFragment"
        android:label="@string/clipboard" />
    <fragment
        android:id="@+id/pluginSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.PluginSettingsFragment"
        android:label="@string/plugins" />
    <fragment
        android:id="@+id/advancedSettingsFragment"
        android:name="com.yuyan.imemodule.ui.fragment.AdvancedSettingsFragment"
        android:label="@string/advanced" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.yuyan.imemodule.ui.fragment.AboutFragment"
        android:label="@string/about" >
        <action
            android:id="@+id/action_aboutFragment_to_licensesFragment"
            app:destination="@id/licensesFragment" />
    </fragment>
    <fragment
        android:id="@+id/licensesFragment"
        android:name="com.yuyan.imemodule.ui.fragment.LicensesFragment"
        android:label="@string/license" />
</navigation>